cmd/kubernetes-resources/converter-service.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: converter-deployment 
spec:
  replicas: 1 # maybe more, no problem should happen with software heart 
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: epos-converter
      version: ${DEPLOY_TAG}
  template:
    metadata:
      labels:
        app: epos-converter
        version: ${DEPLOY_TAG}
      annotations:
        docker-metadata: DOCKER-METADATA
    spec:
      imagePullSecrets:
      - name: epos-ics-c-tests-docker-registry-secret # this line is important!
      containers:
      - name: converter-service
        image: ${DOCKER_REGISTRY}/${CONVERTER_IMAGE}
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 10m
            memory: 100Mi # have to be more than 50MB
        volumeMounts:
          - name: converter-pvc
            mountPath: /converter
      volumes:
        - name: converter-pvc
          persistentVolumeClaim:
            claimName: converter-pvc
