cmd/kubernetes-resources/data-metadata-service.yaml
#    EPOS Open Source - Local installation with Kubernetes
#    Copyright (C) 2023  EPOS ERIC
#
#    This program is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    This program is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <https://www.gnu.org/licenses/>.
kind: Deployment
apiVersion: apps/v1
metadata:
  name: data-metadata-deployment
spec:
  replicas: 1 # maybe more, no problem should happen with software heart
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: epos-data-metadata
      version: ${DEPLOY_TAG}
  template:
    metadata:
      labels:
        app: epos-data-metadata
        version: ${DEPLOY_TAG}
      annotations:
        docker-metadata: DOCKER-METADATA
    spec:
      imagePullSecrets:
      - name: epos-ics-c-tests-docker-registry-secret # this line is important!
      containers:
      - name: data-metadata-service
        image: ${DOCKER_REGISTRY}/${DATA_METADATA_SERVICE_IMAGE}
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 30m
            memory: 1Gi # have to be more than 50MB
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 120
          timeoutSeconds: 40
          periodSeconds: 90
        volumeMounts:
          - name: data-metadata-pvc
            mountPath: /data-metadata
          - name: logging-config-volume
            mountPath: /etc/log4j2/
      volumes:
        - name: data-metadata-pvc
          persistentVolumeClaim:
            claimName: data-metadata-pvc
        - name: logging-config-volume
          configMap:
            name: logging-config
