cmd/kubernetes-resources/backoffice-service.yaml
#    EPOS Open Source - Local installation with Kubernetes
#    Copyright (C) 2023  EPOS ERIC
#
#    This program is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    This program is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <https://www.gnu.org/licenses/>.
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backoffice-deployment 
spec:
  replicas: 1 # maybe more, no problem should happen with software heart 
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: epos-backoffice
      version: ${DEPLOY_TAG}
  template:
    metadata:
      labels:
        app: epos-backoffice
        version: ${DEPLOY_TAG}
      annotations:
        docker-metadata: DOCKER-METADATA
    spec:
      imagePullSecrets:
      - name: epos-ics-c-tests-docker-registry-secret 
      containers:
      - name: backoffice-service
        image: ${DOCKER_REGISTRY}/${BACKOFFICE_SERVICE_IMAGE}
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
        ports:
        - containerPort: 8080
          name: backoffice-port
        volumeMounts:
          - name: backoffice-pvc
            mountPath: /backoffice
          - name: logging-config-volume
            mountPath: /etc/log4j2/
      volumes:
        - name: backoffice-pvc
          persistentVolumeClaim:
            claimName: backoffice-pvc
        - name: logging-config-volume
          configMap:
            name: logging-config
---
kind: Service
apiVersion: v1
metadata:
  name: backoffice-service
  labels:
    app: epos-backoffice
    version: ${DEPLOY_TAG}
spec:
  selector:
    app: epos-backoffice
    version: ${DEPLOY_TAG}
  ports:
  - protocol: TCP
    port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backoffice-ingress
  labels:
    app: epos-backoffice
    version: ${DEPLOY_TAG}
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: ${DEPLOY_PATH}api/backoffice-service/v1/
        pathType: Prefix
        backend:
          service:
            name: backoffice-service
            port:
              number: 8080
