cmd/kubernetes-resources/epos-gui.yaml
#    EPOS Open Source - Local installation with Kubernetes
#    Copyright (C) 2023  EPOS ERIC
#
#    This program is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    This program is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <https://www.gnu.org/licenses/>.
kind: Deployment
apiVersion: apps/v1
metadata:
  name: epos-gui
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: epos-gui
      version: ${DEPLOY_TAG}
  template:
    metadata:
      labels:
        app: epos-gui
        version: ${DEPLOY_TAG}
      annotations:
        docker-metadata: DOCKER-METADATA
    spec:
      imagePullSecrets:
      - name: epos-ics-c-tests-docker-registry-secret # this line is important!
      containers:
      - name: epos-gui
        image: ${DOCKER_REGISTRY}/${GUI_IMAGE}
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: epos-gui-service
  labels:
    app: epos-gui
    version: ${DEPLOY_TAG}
spec:
  selector:
    app: epos-gui
    version: ${DEPLOY_TAG}
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epos-gui-ingress
  labels:
    app: epos-gui
    version: ${DEPLOY_TAG}
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: ${DEPLOY_PATH}
        pathType: Prefix
        backend:
          service:
            name: epos-gui-service
            port:
              number: 80
