cmd/kubernetes-resources/processing-access-service.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: processing-access-deployment 
spec:
  replicas: 1 # maybe more, no problem should happen with software heart 
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: epos-processing-access
      version: ${DEPLOY_TAG}
  template:
    metadata:
      labels:
        app: epos-processing-access
        version: ${DEPLOY_TAG}
      annotations:
        docker-metadata: DOCKER-METADATA
    spec:
      imagePullSecrets:
      - name: epos-ics-c-tests-docker-registry-secret # this line is important!
      containers:
      - name: processing-access-service
        image: ${DOCKER_REGISTRY}/${PROCESSING_SERVICE_IMAGE}
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 10m
            memory: 100Mi # have to be more than 50MB
        ports:
        - containerPort: 8080
          name: processing-port
        volumeMounts:
          - name: processing-access-pvc
            mountPath: /processing-access
          - name: logging-config-volume
            mountPath: /etc/log4j2/
      volumes:
        - name: processing-access-pvc
          persistentVolumeClaim:
            claimName: processing-access-pvc
        - name: logging-config-volume
          configMap:
            name: logging-config
---
kind: Service
apiVersion: v1
metadata:
  name: processing-access-service
  labels:
    app: epos-processing-access
    version: ${DEPLOY_TAG}
spec:
  selector:
    app: epos-processing-access
    version: ${DEPLOY_TAG}
  ports:
  - protocol: TCP
    port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: processing-access-ingress
  labels:
    app: epos-processing-access
    version: ${DEPLOY_TAG}
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: ${DEPLOY_PATH}api/processing-access-service/v1/
        pathType: Prefix
        backend:
          service:
            name: processing-access-service
            port:
              number: 8080
