cmd/kubernetes-resources/rabbitmq.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  labels:
    app: rabbitmq
    version: ${DEPLOY_TAG}
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /deploy/pathrabbitmq/?(.*)
        pathType: Prefix
        backend:
          service:
            name: netrabbit
            port:
              number: 15672
